[package]
name = "EIP1193"
version = "0.1.0"
authors = ["Ryan.K <ryankung@ieee.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = "0.3.44"
js-sys = "0.3.44"
wasm-bindgen = {version = "0.2.67", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.17"
serde = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]
