[package]
name = "EIP1193"
version = "0.1.0"
authors = ["Ryan.K <ryankung@ieee.org>"]
edition = "2018"
license = "GPL-2.0"
keywords = ["wasm", "EIP1193", "Ethereum"]
categories = ["api-binding", "wasm", "web-programming"]
readme = "README.md"
repository = "https://github.com/RyanKung/EIP1193_rs"
exclude = ["build/**/*.o", "doc/**/*.html"]
include = ["src/**/*", "Cargo.toml"]
description ="This package implementated a bridge for Etherum Provider (EIP1193)."

[dependencies]
js-sys = "0.3.44"
wasm-bindgen = { version = "0.2.67", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[lib]
crate-type = ["cdylib", "rlib"]
